# platform-directories

./: .travis.yml  README.md  appvayor.yml  appveyor.yml  jest.config.js  package-lock.json  package.json
lib/: index.js  index.test.js
lib/__snapshots__/: index.test.js.snap
lib/types/: index.d.ts
native/: Cargo.toml
native/src/: lib.rs
