[package]
name = "platform-directories"
version = "0.1.0"
authors = ["Ben Goldberg <benjamin.goldberg@enel.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "platform_directories"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
directories = "2.0.1"
